Silence more Clang (Xcode 7) warnings

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -343,11 +343,15 @@ if(CMAKE_COMPILER_IS_GNUCXX)
 endif(CMAKE_COMPILER_IS_GNUCXX)
 
 if (CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
-   set (WARNING_FLAGS_CXX "-Wall -Wno-overloaded-virtual -Wno-redeclared-class-member")
+   set(WARNING_FLAGS_CXX "-Wall -Wno-overloaded-virtual \
+     -Wno-redeclared-class-member \
+     -Wno-inconsistent-missing-override \
+     -Wno-unused-local-typedef")
+
    set(CMAKE_XCODE_ATTRIBUTE_CLANG_CXX_LIBRARY "libc++")
    set(CMAKE_XCODE_ATTRIBUTE_CLANG_CXX_LANGUAGE_STANDARD "c++11")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -stdlib=libc++")
-   set (WARNING_FLAGS_C "-Wall")
+   set(WARNING_FLAGS_C "-Wall")
 endif()
 
 if(WIN32)
