Work on the launcher

--- a/src/GUI/CMakeLists.txt
+++ b/src/GUI/CMakeLists.txt
@@ -1,57 +1,57 @@
 include(FlightGearComponent)
 
 set(SOURCES
-	AirportList.cxx
-	CanvasWidget.cxx
-	MapWidget.cxx
-	WaypointList.cxx
-	dialog.cxx
-	FGPUIDialog.cxx
-	fonts.cxx
-	gui.cxx
-	gui_funcs.cxx
-	layout-props.cxx
-	layout.cxx
-	menubar.cxx
-	FGPUIMenuBar.cxx
-	new_gui.cxx
-	property_list.cxx
-	FGFontCache.cxx
-	FGColor.cxx
+  AirportList.cxx
+  CanvasWidget.cxx
+  MapWidget.cxx
+  WaypointList.cxx
+  dialog.cxx
+  FGPUIDialog.cxx
+  fonts.cxx
+  gui.cxx
+  gui_funcs.cxx
+  layout-props.cxx
+  layout.cxx
+  menubar.cxx
+  FGPUIMenuBar.cxx
+  new_gui.cxx
+  property_list.cxx
+  FGFontCache.cxx
+  FGColor.cxx
     FileDialog.cxx
     PUIFileDialog.cxx
     MouseCursor.cxx
     MessageBox.cxx
-	)
+  )
 
 set(HEADERS
-	AirportList.hxx
-	CanvasWidget.hxx
-	MapWidget.hxx
-	WaypointList.hxx
-	dialog.hxx
-	FGPUIDialog.hxx
-	gui.h
-	layout.hxx
-	menubar.hxx
-	FGPUIMenuBar.hxx
-	new_gui.hxx
-	property_list.hxx
-	FGFontCache.hxx
-	FGColor.hxx
+  AirportList.hxx
+  CanvasWidget.hxx
+  MapWidget.hxx
+  WaypointList.hxx
+  dialog.hxx
+  FGPUIDialog.hxx
+  gui.h
+  layout.hxx
+  menubar.hxx
+  FGPUIMenuBar.hxx
+  new_gui.hxx
+  property_list.hxx
+  FGFontCache.hxx
+  FGColor.hxx
     FileDialog.hxx
     PUIFileDialog.hxx
     MouseCursor.hxx
     MessageBox.hxx
-	)
+  )
 
 if(WIN32)
-	list(APPEND HEADERS WindowsMouseCursor.hxx
-						FGWindowsMenuBar.hxx
-						WindowsFileDialog.hxx)
-	list(APPEND SOURCES WindowsMouseCursor.cxx
-						FGWindowsMenuBar.cxx
-						WindowsFileDialog.cxx)
+  list(APPEND HEADERS WindowsMouseCursor.hxx
+            FGWindowsMenuBar.hxx
+            WindowsFileDialog.hxx)
+  list(APPEND SOURCES WindowsMouseCursor.cxx
+            FGWindowsMenuBar.cxx
+            WindowsFileDialog.cxx)
 endif()
 
 if (APPLE)
@@ -70,7 +70,7 @@ endif()
 
 
 if (HAVE_QT)
-    qt5_wrap_ui(uic_sources Launcher.ui 
+    qt5_wrap_ui(uic_sources Launcher.ui
                             EditRatingsFilterDialog.ui
                             SetupRootDialog.ui
                             AddCatalogDialog.ui
@@ -81,6 +81,7 @@ if (HAVE_QT)
 
     add_library(fglauncher QtLauncher.cxx
                             QtLauncher.hxx
+                            QtLauncher_private.hxx
                             AirportDiagram.cxx
                             AirportDiagram.hxx
                             EditRatingsFilterDialog.cxx
