First implementation of an environment audio fx module

--- a/src/Sound/CMakeLists.txt
+++ b/src/Sound/CMakeLists.txt
@@ -5,6 +5,7 @@ set(SOURCES
 	soundgenerator.cxx
 	beacon.cxx
 	fg_fx.cxx
+        fg_environmentfx.cxx
 	morse.cxx
 	sample_queue.cxx
 	voice.cxx
@@ -17,6 +18,7 @@ set(HEADERS
 	soundgenerator.hxx
 	beacon.hxx
 	fg_fx.hxx
+        fg_environmentfx.hxx
 	morse.hxx
 	sample_queue.hxx
 	voice.hxx
