Rename EnvironmentFX to SceneFX and rethink the aircraft model specific properties: use a samping factor which applies to both volume and reference_distance and max_distance

--- a/src/Sound/CMakeLists.txt
+++ b/src/Sound/CMakeLists.txt
@@ -5,7 +5,7 @@ set(SOURCES
 	soundgenerator.cxx
 	beacon.cxx
 	fg_fx.cxx
-        environment_fx.cxx
+        scenefx.cxx
 	morse.cxx
 	sample_queue.cxx
 	voice.cxx
@@ -18,7 +18,7 @@ set(HEADERS
 	soundgenerator.hxx
 	beacon.hxx
 	fg_fx.hxx
-        environment_fx.hxx
+        scenefx.hxx
 	morse.hxx
 	sample_queue.hxx
 	voice.hxx
