{fatal,modal}MessageBox: Use Qt on Linux when available
(console error messages are invisible when started from an icon)

--- a/src/GUI/CMakeLists.txt
+++ b/src/GUI/CMakeLists.txt
@@ -105,6 +105,8 @@ if (HAVE_QT)
                             PathsDialog.hxx
                             LocationWidget.cxx
                             LocationWidget.hxx
+                            QtMessageBox.cxx
+                            QtMessageBox.hxx
                             ${uic_sources}
                             ${qrc_sources})
 
