Work on better unit-testing
- compile a subset of fgfs as a library and link test
  applications against this. For the moment the library is
  compiled with a special #define to avoid linkage issues,
  this will ultimately be unnecessary.
- add some skeleton tests using the system.

At present the test setup is specific to my machine, and
hence not run automatically; this will be improved in
future commits.

--- a/src/Airports/CMakeLists.txt
+++ b/src/Airports/CMakeLists.txt
@@ -15,7 +15,7 @@ set(SOURCES
 	sidstar.cxx
 	airport.cxx
 	xmlloader.cxx
-        airportdynamicsmanager.cxx
+  airportdynamicsmanager.cxx
 	)
 
 set(HEADERS
@@ -34,7 +34,10 @@ set(HEADERS
 	sidstar.hxx
 	airport.hxx
 	xmlloader.hxx
-        airportdynamicsmanager.hxx
+   airportdynamicsmanager.hxx
 	)
-    		
+
 flightgear_component(Airports "${SOURCES}" "${HEADERS}")
+
+add_executable(test_groundnetwork test_groundnetwork.cxx)
+target_link_libraries(test_groundnetwork fgcorelib ${TEST_LIBS})
