Split GroundNetwork class down the middle
- ATC functions move to GroundController, which layers above
  remaining GroundNetwork functionality
- dynamics owns both the groundNetwork and the ground controller.

--- a/src/ATC/CMakeLists.txt
+++ b/src/ATC/CMakeLists.txt
@@ -8,6 +8,7 @@ set(SOURCES
         ATISEncoder.cxx
         MetarPropertiesATISInformationProvider.cxx
         CurrentWeatherATISInformationProvider.cxx
+        GroundController.cxx
 	)
 
 set(HEADERS
@@ -18,6 +19,7 @@ set(HEADERS
         ATISEncoder.hxx
         MetarPropertiesATISInformationProvider.hxx
         CurrentWeatherATISInformationProvider.hxx
+        GroundController.hxx
 	)
     	
 flightgear_component(ATC "${SOURCES}" "${HEADERS}")
