Time:  Renamed the sunsolver.cxx to bodysolver.cxx.
This is in preparation for generalising the code for handling all solar system bodies.

--- a/src/Time/CMakeLists.txt
+++ b/src/Time/CMakeLists.txt
@@ -3,13 +3,13 @@ include(FlightGearComponent)
 set(SOURCES
 	TimeManager.cxx
 	light.cxx
-	sunsolver.cxx
+	bodysolver.cxx
 	)
 	
 set(HEADERS
 	TimeManager.hxx
 	light.hxx
-	sunsolver.hxx
+	bodysolver.hxx
 	)
     	
 flightgear_component(Time "${SOURCES}" "${HEADERS}")
