Use target_include_directories in some places.
I didn’t know about this feature when doing the original CMake files,
we can use this to target header-file includes more precisely.

(Probably more cases exist that can be changed from global to target-
specific includes)

--- a/src/FDM/JSBSim/CMakeLists.txt
+++ b/src/FDM/JSBSim/CMakeLists.txt
@@ -192,7 +192,8 @@ set(SOURCES
     models/propulsion/FGTurbine.cpp
     models/propulsion/FGTurboProp.cpp
     )
-    
-include_directories(${PROJECT_SOURCE_DIR}/src/FDM/JSBSim)
+
 
 add_library(JSBSim STATIC ${SOURCES} ${HEADERS})
+
+target_include_directories(JSBSim PRIVATE ${PROJECT_SOURCE_DIR}/src/FDM/JSBSim)
