Initial work on importing SimGear targets

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -158,7 +158,6 @@ else()
 endif()
 
 # FlightGear build options
-option(SIMGEAR_SHARED    "Set to ON when SimGear was built as a shared library" OFF)
 option(LOGGING           "Set to ON to build FlightGear with logging support (default)" ON)
 option(JSBSIM_TERRAIN    "Set to ON to build FlightGear with JSBSim terrain handling code" ON)
 option(SP_FDMS           "Set to ON to build FlightGear with special-purpose FDMs" ON)
@@ -218,6 +217,7 @@ include( ConfigureMsvc3rdParty )
 
 if(EVENT_INPUT)
     if(APPLE)
+    # nothing else to do here
     elseif(CMAKE_SYSTEM_NAME MATCHES "Linux")
         if(NOT UDEV_FOUND)
             message(WARNING "UDev not found, event input is disabled!")
@@ -239,9 +239,7 @@ endif(EVENT_INPUT)
 
 # check required dependencies
 find_package(Boost   REQUIRED)
-find_package(ZLIB    REQUIRED)
 find_package(OpenGL  REQUIRED)
-find_package(OpenAL  REQUIRED)
 find_package(OpenSceneGraph 3.2.0 REQUIRED
   osgText
   osgSim
@@ -267,7 +265,6 @@ endif()
 
 if (SYSTEM_SQLITE)
     find_package(SQLite3 REQUIRED)
-
     message(STATUS "Using system SQLite3 library")
 else()
     set(SQLITE3_INCLUDED_DIR "${CMAKE_SOURCE_DIR}/3rdparty/sqlite3")
@@ -313,7 +310,7 @@ endif (ENABLE_QT)
 find_package(PLIB REQUIRED puaux pu js fnt)
 
 # FlightGear and SimGear versions need to match
-find_package(SimGear ${FLIGHTGEAR_VERSION} REQUIRED)
+find_package(SimGear ${FLIGHTGEAR_VERSION} CONFIG REQUIRED)
 
 ##############################################################################
 
@@ -379,9 +376,7 @@ set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${MSVC_LD_FLAGS}")
 
 include_directories(${OPENSCENEGRAPH_INCLUDE_DIRS}
     ${Boost_INCLUDE_DIRS}
-    ${ZLIB_INCLUDE_DIR}
     ${OPENGL_INCLUDE_DIR}
-    ${OPENAL_INCLUDE_DIR}
     ${SIMGEAR_INCLUDE_DIRS}
     ${PLIB_INCLUDE_DIR}
     ${SQLITE3_INCLUDED_DIR} )
