--- a/utils/GPSsmooth/CMakeLists.txt
+++ b/utils/GPSsmooth/CMakeLists.txt
@@ -13,26 +13,23 @@ add_executable(UGsmooth
     UGear.cxx UGear.hxx
     UGear_command.cxx UGear_command.hxx
     UGear_telnet.cxx UGear_telnet.hxx
-    UGear_main.cxx 
+    UGear_main.cxx
 )
 
 target_link_libraries(GPSsmooth
-    ${SIMGEAR_CORE_LIBRARIES}
-    ${SIMGEAR_CORE_LIBRARY_DEPENDENCIES}
+    SimGearCore
     ${PLIB_SG_LIBRARY}
     ${PLIB_UL_LIBRARY}
 )
 
 target_link_libraries(MIDGsmooth
-    ${SIMGEAR_CORE_LIBRARIES}
-    ${SIMGEAR_CORE_LIBRARY_DEPENDENCIES}
+    SimGearCore
     ${PLIB_SG_LIBRARY}
     ${PLIB_UL_LIBRARY}
 )
 
 target_link_libraries(UGsmooth
-    ${SIMGEAR_CORE_LIBRARIES}
-    ${SIMGEAR_CORE_LIBRARY_DEPENDENCIES}
+    SimGearCore
     ${PLIB_SG_LIBRARY}
     ${PLIB_UL_LIBRARY}
     ${ZLIB_LIBRARY}
