--- a/utils/fgviewer/CMakeLists.txt
+++ b/utils/fgviewer/CMakeLists.txt
@@ -47,10 +47,7 @@ if(X11_FOUND)
 endif()
 
 target_link_libraries(fgviewer
-	${SIMGEAR_LIBRARIES}
-	${OPENSCENEGRAPH_LIBRARIES}
-	${OPENGL_LIBRARIES}
+	SimGearScene SimGearCore
 	${FGVIEWER_RTI_LIBRARIES}
-        ${SIMGEAR_CORE_LIBRARY_DEPENDENCIES}
 )
 install(TARGETS fgviewer RUNTIME DESTINATION bin)
