--- a/utils/fgelev/CMakeLists.txt
+++ b/utils/fgelev/CMakeLists.txt
@@ -1,11 +1,7 @@
 add_executable(fgelev fgelev.cxx)
 
 target_link_libraries(fgelev
-	${SIMGEAR_LIBRARIES}
-	${OPENSCENEGRAPH_LIBRARIES}
-	${OPENGL_LIBRARIES}
-        ${SIMGEAR_CORE_LIBRARY_DEPENDENCIES}
-        ${ZLIB_LIBRARY}
+	SimGearScene SimGearCore
 )
 
 install(TARGETS fgelev RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
