--- a/utils/TerraSync/CMakeLists.txt
+++ b/utils/TerraSync/CMakeLists.txt
@@ -1,9 +1,6 @@
 
 #add_executable(terrasync terrasync.cxx)
 
-#target_link_libraries(terrasync
-#	${SIMGEAR_CORE_LIBRARIES}
-#	${SIMGEAR_CORE_LIBRARY_DEPENDENCIES}
-#)
+#target_link_libraries(terrasync SimGearCore)
 
 #install(TARGETS terrasync RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
