add new QtFileDialog to avoid using Nasal in file selectors
(and hence avoid applying Nasal security rules to them)

--- a/src/GUI/CMakeLists.txt
+++ b/src/GUI/CMakeLists.txt
@@ -106,6 +106,8 @@ if (HAVE_QT)
                             LocationWidget.hxx
                             QtMessageBox.cxx
                             QtMessageBox.hxx
+                            QtFileDialog.cxx
+                            QtFileDialog.hxx
                             ${uic_sources}
                             ${qrc_sources})
 
