Prompt the user when the default hangar is missing.
In the Qt launcher, when the default hangar isn’t found, show
a hint in the aircraft list.

--- a/src/GUI/CMakeLists.txt
+++ b/src/GUI/CMakeLists.txt
@@ -75,7 +75,8 @@ if (HAVE_QT)
                             SetupRootDialog.ui
                             AddCatalogDialog.ui
                             PathsDialog.ui
-                            LocationWidget.ui)
+                            LocationWidget.ui
+                            NoOfficialHanagar.ui)
     qt5_add_resources(qrc_sources resources.qrc)
 
 
