Allow scenery installation from the launcher.
Replaces FGadmin functionality.

--- a/utils/TerraSync/CMakeLists.txt
+++ b/utils/TerraSync/CMakeLists.txt
@@ -1,9 +1,9 @@
 
-add_executable(terrasync terrasync.cxx)
+#add_executable(terrasync terrasync.cxx)
 
-target_link_libraries(terrasync
-	${SIMGEAR_CORE_LIBRARIES}
-	${SIMGEAR_CORE_LIBRARY_DEPENDENCIES}
-)
+#target_link_libraries(terrasync
+#	${SIMGEAR_CORE_LIBRARIES}
+#	${SIMGEAR_CORE_LIBRARY_DEPENDENCIES}
+#)
 
-install(TARGETS terrasync RUNTIME DESTINATION bin)
+#install(TARGETS terrasync RUNTIME DESTINATION bin)
