Use CMAKE_INSTALL_BINDIR
Allow /bin install directory to be overriden. Debian for example uses this
to install FlightGear to /usr/games/ instead of /usr/bin/

https://cmake.org/cmake/help/latest/module/GNUInstallDirs.html

--- a/src/FDM/YASim/CMakeLists.txt
+++ b/src/FDM/YASim/CMakeLists.txt
@@ -49,7 +49,7 @@ target_link_libraries(yasim-proptest
 		${SIMGEAR_CORE_LIBRARIES}
 		${SIMGEAR_CORE_LIBRARY_DEPENDENCIES})
 
-install(TARGETS yasim yasim-proptest RUNTIME DESTINATION bin)
+install(TARGETS yasim yasim-proptest RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
 
 endif(ENABLE_TESTS)
 
