--- a/utils/fgai/CMakeLists.txt
+++ b/utils/fgai/CMakeLists.txt
@@ -25,4 +25,4 @@ target_link_libraries(fgai
   ${SIMGEAR_CORE_LIBRARY_DEPENDENCIES}
 )
 
-install(TARGETS fgai RUNTIME DESTINATION bin)
+install(TARGETS fgai RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
