--- a/utils/TerraSync/CMakeLists.txt
+++ b/utils/TerraSync/CMakeLists.txt
@@ -6,4 +6,4 @@
 #	${SIMGEAR_CORE_LIBRARY_DEPENDENCIES}
 #)
 
-#install(TARGETS terrasync RUNTIME DESTINATION bin)
+#install(TARGETS terrasync RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
